# debugify

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: macro.rs
